# Pure-Riot

./: .gitignore  CHANGELOG.md  README.md  pure-riot.cabal
src/: Platforms.hs  PureRiot.hs  Regions.hs
src/Endpoints/AccountsRSO/: AccountV1.hs
src/Endpoints/LeagueofLegends/: ChampionMasteryV4.hs  ChampionV3.hs  ClashV1.hs  LeagueExpV4.hs  LeagueV4.hs  LolChallengesV1.hs  LolStatusV4.hs  MatchV5.hs  SpectatorV5.hs  SummonerV4.hs  TournamentStubV5.hs
src/Endpoints/LeagueofLegendsRSO/: LolRsoMatchV1.hs
src/Endpoints/LeagueofLegendsTournaments/: TournamentV5.hs
src/Endpoints/LegendsofRuneterra/: LorMatchV1.hs  LorRankedV1.hs  LorStatusV1.hs
src/Endpoints/LegendsofRuneterraRSO/: LorDeckV1.hs  LorInventoryV1.hs
src/Endpoints/TeamfightTactics/: SpectatorTftV5.hs  TftLeagueV1.hs  TftMatchV1.hs  TftStatusV1.hs
src/Endpoints/TeamfightTacticsRSO/: TftSummonerV1.hs
src/Endpoints/VALORANT/: ValConsoleMatchV1.hs  ValConsoleRankedV1.hs  ValContentV1.hs  ValMatchV1.hs  ValRankedV1.hs  ValStatusV1.hs
